subjects/FormalLanguages/formal_languages/lexer/tests/negative/wrong_id.l


// identitifers cannot start with number
read 123var
